# twist2_docker

./: .cursorrules  .gitignore  .gitmodules  CHANGELOG.md  DOCKERFILE_FIXES_APPLIED.md  DOCKER_SETUP_NOTES.md  DOCKER_VERIFICATION_STEPS.md  Dockerfile  Dockerfile.new  FINAL_TEST_CHECKLIST.md  QUICK_START.md  README.md  README_GITHUB.md  SETUP_COMPLETE.md  docker-compose.yml  entrypoint.sh  requirements.txt
future_plans/: PHASE1_PYTHON_POC.md  PHASE2_ROS2_PORT.md
scripts/: README.md  clean_all.sh  install.sh  pc_forward_setup.sh  rebuild_docker.sh  robot_network_setup.sh  run.sh  setup_isaacgym.sh  voice_service.py
twist2/: README.md  TRAINING_NOTES.md  VERIFICATION_GUIDE.md  fix_wandb.sh  gui.sh  hand_teleop.sh  hybrid_teleop.sh  joystick_teleop.sh  quick_test.sh  sim2real.sh  sim2real_hybrid.sh  sim2sim_hybrid.sh  teleop.sh  teleop_hand_tracking.sh  teleop_inspire.sh  test_gesture.py  test_robomimic_loco.sh  train.sh  verify_docker_setup.sh  verify_setup.sh
twist2/deploy_real/: CMakeLists.txt  compare_joystick_inputs.py  g1_loco_redis_bridge.cpp  hand_teleop.py  hybrid_loco_teleop.py  server_low_level_g1_real.py  server_low_level_g1_sim.py  test_unitree_connection.py  xrobot_teleop_hand_tracking.py  xrobot_teleop_inspire.py  xrobot_teleop_to_robot_w_hand.py
twist2/deploy_real/robot_control/: g1_wrapper.py  inspire_hand_wrapper.py
twist2/deploy_real/robot_control/configs/: g1.yaml
twist2/legged_gym/legged_gym/scripts/: train.py
twist2/legged_gym/motion_data_configs/: example_motions.yaml  twist2_dataset.yaml  twist2_dataset.yaml.save
(+2 files in other folders)
